--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --color-bg-dark: #f5f5f5;
   --color-bg: #fdfffd;
+  --color--white: white;
   --color-gray: #d1d1d1;
   --color-text: #22243b;
   --color-accent: #f16e03;
@@ -11,6 +12,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: 1.2rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
@@ -36,6 +38,15 @@ body {
   display: flex;
   flex-direction: column;
   box-shadow: 5px 5px 21px 4px rgba(0, 0, 0, 0.4 1.95px 1.95px 2.6px5);
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 ul {
